<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:lottie_rawRes="@raw/background"
        app:lottie_autoPlay="true"
        app:lottie_loop="true">

    </com.airbnb.lottie.LottieAnimationView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center_horizontal"
        android:text="@string/meeting_point_title"
        android:textAllCaps="false"
        android:transitionName="transition1"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent">

    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button"
        android:elevation="@dimen/_15sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:outlineAmbientShadowColor="@color/black"
        android:shadowColor="@color/black"
        android:shadowRadius="@integer/material_motion_duration_long_1"
        android:text="@string/login_buton"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/ubuntu_bold"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingStart="@dimen/_12sdp"
        android:gravity="center_horizontal"
        android:text="@string/this_is_the_meeting_point_the_crossroad_of_our_ideas"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        tools:layout_editor_absoluteX="0dp">

    </TextView>

    <TextView
        android:id="@+id/signup_redirect"
        android:layout_width="108dp"
        android:layout_height="26dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="284dp"
        android:clickable="true"
        android:fontFamily="@font/open_sans"
        android:gravity="center_horizontal"
        android:text="@string/sign_up_txt"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="italic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>