<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:background="@drawable/background_login"
    android:padding="@dimen/_24sdp"

    android:scrollbars="none"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_210sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/login_screen_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_38ssp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/email_edittext"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp">


        </TextView>

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:inputType="textEmailAddress"
            android:elevation="@dimen/_5sdp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="@string/please_enter_your_email"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_14sdp"
            android:imeOptions="actionNext"
            android:background="@drawable/custom_edittext"
            android:shadowColor="@color/black"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:shadowDx="@integer/material_motion_duration_long_1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp">

        </EditText>
        <TextView
            android:id="@+id/pass_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            >

        </TextView>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start">
            <EditText
                android:id="@+id/pass_edittext"
                android:drawableStart="@drawable/ic_baseline_password_24"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:inputType="textPassword"
                android:elevation="@dimen/_5sdp"
                android:textColorHint="@color/black"
                android:hint="@string/please_enter_your_password"
                android:textSize="@dimen/_14sdp"
                android:imeOptions="actionNext"
                android:shadowColor="@color/black"
                android:shadowRadius="@integer/material_motion_duration_long_1"
                android:shadowDx="@integer/material_motion_duration_long_1"
                android:background="@drawable/custom_edittext"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp">

            </EditText>

            <ImageView
                android:id="@+id/show_pass_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center|end"
                android:layout_marginEnd="12dp"
                android:alpha=".5"
                android:onClick="ShowHidePass"
                android:padding="5dp"
                android:src="@drawable/ic_visibility_off">

            </ImageView>

        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/button"
                android:textStyle="bold"
                android:elevation="@dimen/_15sdp"
                android:text="@string/login_buton"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:textAllCaps="false"
                android:shadowColor="@color/black"
                android:shadowRadius="@integer/material_motion_duration_long_1"
                android:outlineAmbientShadowColor="@color/black"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_gravity="center_horizontal">

            </androidx.appcompat.widget.AppCompatButton>
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:visibility="invisible">

            </ProgressBar>
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/check_mark"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:visibility="invisible">

            </com.airbnb.lottie.LottieAnimationView>


        </FrameLayout>




    </LinearLayout>


</ScrollView>